# Trade-Agent

./: .dvcignore  .gitignore  AGENTS.md  CODE_QUALITY_ANALYSIS_SUMMARY.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  Makefile  RAINBOW_DQN_SCRIPTS_SUMMARY.md  README.md  RL_ENSEMBLE_IMPLEMENTATION_SUMMARY.md  SECURITY_IMPROVEMENTS_SUMMARY.md  TASK_5_5_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_README.md  VISUALIZATION_SYSTEM_SUMMARY.md  benchmark_visualization.py  cleanup_plan.md  data.db  debug_environment.py  demo_visualization.py  docker-compose.yml  find_progress_files.py  live_viewer_enhanced.py  mlflow.db  monitor_hyperopt.py  pyproject.toml  requirements.txt  run_task_7_2.py  setup_environment.py  start_training_with_monitoring.py  task_5_4_completion_report.md  test_flexible_heads_standalone.py  test_lstm_training.py  test_rl_implementation.py  test_task_7_1_validation.py
.dvc/: .gitignore
config/: model_serving.yaml  production.yaml  secrets.yaml.example  security.yaml  settings.yaml
configs/: __init__.py  hyperparameter_optimization.yaml  mlflow_config.yaml  wandb_config.yaml
data/: __init__.py  models.py  pipeline.py
docker/: Dockerfile.api  Dockerfile.data-processor  Dockerfile.ml-worker
docs/: CHANGELOG.md  CODE_QUALITY_ANALYSIS_SUMMARY.md  CODE_QUALITY_SUMMARY.md  CONTRIBUTING.md  README.md  RISK_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  RL_AGENTS_IMPLEMENTATION_SUMMARY.md  RL_ENSEMBLE_IMPLEMENTATION_SUMMARY.md  RL_ENSEMBLE_IMPROVEMENT_PLAN.md  RL_IMPLEMENTATION_SUMMARY.md  SECURITY_IMPROVEMENTS_SUMMARY.md  SUMMARY.md  batch_processing_optimization_design.md  (+42 more)
(+554 files in other folders)
