[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-trading-ensemble"
version = "0.1.0"
description = "Advanced ML Trading Ensemble with CNN+LSTM and RL Agents"
authors = [{name = "ML Trading Research Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.3",
    "pandas>=2.1.4",
    "mlflow>=2.8.1",
    "wandb>=0.16.0",
    "optuna>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

gpu = [
    "nvidia-ml-py3>=12.535.108",
    "accelerate>=0.24.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "experiments*", "data*", "configs*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true